[tool.poetry]
name = "seleniummm"
version = "0.1.0"
description = "selenium wrapper"
authors = ["mdvtkr <mdvtkr@gmail.com>"]
license = "Apache Software License (Apache 2.0)"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
selenium = "^4.8.0"
chromedriver-autoinstaller = "^0.4.0"
multipledispatch = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry_bumpversion.file."seleniummm/__init__.py"]