[tool.poetry]
name = "seleniummm"
version = "0.9.2"
description = "selenium wrapper"
authors = ["mdvtkr <mdvtkr@gmail.com>"]
license = "Apache Software License (Apache 2.0)"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
selenium = "^4.8.0"
multipledispatch = "^0.6.0"
screeninfo = "^0.8.1"
undetected-chromedriver = "^3.4.6"
selenium-wire = "^5.1.0"
selenium-stealth = "^1.0.6"
tedious = {git = "https://github.com/mdvtkr/tedious.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry_bumpversion.file."seleniummm/__init__.py"]